# argus

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  argus.toml  deny.toml  docker-compose.yml
.github/workflows/: ci.yml
bins/argus-server/: Cargo.toml
bins/argus-server/src/: health.rs  jwks.rs  main.rs  metrics.rs  state.rs
bins/argusctl/: Cargo.toml
bins/argusctl/src/: main.rs
crates/argus-api/: Cargo.toml
crates/argus-api/src/: lib.rs
crates/argus-auth/: Cargo.toml
crates/argus-auth/src/: lib.rs
crates/argus-authz/: Cargo.toml
crates/argus-authz/src/: check.rs  lib.rs  model.rs  store.rs
crates/argus-config/: Cargo.toml
crates/argus-config/src/: lib.rs
crates/argus-connectors/: Cargo.toml
crates/argus-connectors/src/: lib.rs
crates/argus-core/: Cargo.toml
crates/argus-core/src/: config.rs  error.rs  id.rs  lib.rs  models.rs
crates/argus-core/src/aggregates/: api_key.rs  audit.rs  connector.rs  device.rs  invitation.rs  lifecycle.rs  mfa.rs  mod.rs  oidc_client.rs  org.rs  permission.rs  project.rs  session.rs  tenant_policy.rs  user.rs  webhook.rs
crates/argus-core/src/events/: api_key.rs  audit.rs  connector.rs  device.rs  invitation.rs  lifecycle.rs  mfa.rs  mod.rs  oidc_client.rs  org.rs  permission.rs  project.rs  session.rs  tenant_policy.rs  user.rs  webhook.rs
crates/argus-core/src/models/: device.rs  org.rs  permission.rs  policy.rs  session.rs  user.rs
crates/argus-crypto/: Cargo.toml
crates/argus-crypto/benches/: crypto_bench.rs
crates/argus-crypto/src/: encryption.rs  hashing.rs  hmac_util.rs  hsm.rs  jwt.rs  keys.rs  lib.rs
crates/argus-mfa/: Cargo.toml
crates/argus-mfa/src/: lib.rs
crates/argus-saml/: Cargo.toml
crates/argus-saml/src/: lib.rs
crates/argus-sdk/: Cargo.toml
crates/argus-sdk/src/: lib.rs
crates/argus-store/: Cargo.toml
crates/argus-store/src/: event_store.rs  lib.rs  migrations.rs  nats.rs  projection.rs  redis_cache.rs
crates/argus-telemetry/: Cargo.toml
crates/argus-telemetry/src/: lib.rs
crates/argus-tenant/: Cargo.toml
crates/argus-tenant/src/: lib.rs
crates/argus-threat/: Cargo.toml
crates/argus-threat/src/: lib.rs
crates/argus-webauthn/: Cargo.toml
crates/argus-webauthn/src/: lib.rs
crates/argus-worker/: Cargo.toml
crates/argus-worker/src/: lib.rs
migrations/: 001_event_store.sql  002_read_models.sql
tests/phase0/: Cargo.toml
tests/phase0/src/: aggregate_replay.rs  config_loading.rs  crypto_roundtrip.rs  lib.rs
