[package]
name = "argus-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Layered configuration system for Argus IAM"

[dependencies]
argus-core = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
