[package]
name = "argus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain types, error hierarchy, and configuration for Argus IAM"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
