[package]
name = "argus-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for Argus IAM: Argon2id, Ed25519, JWT, ChaCha20-Poly1305, HKDF"

[dependencies]
argus-core = { workspace = true }
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = "0.10"
hkdf = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
ring = "0.17"
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { workspace = true }
