[package]
name = "argus-tenant"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-tenancy management for Argus IAM"

[dependencies]
argus-core = { workspace = true }
argus-store = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
